--- a/projectSQL/App.config
+++ b/projectSQL/App.config
@@ -1,6 +1,27 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+  <connectionStrings>
+    <add name="Oline_ExamEntities" connectionString="metadata=res://*/OnlineExam.csdl|res://*/OnlineExam.ssdl|res://*/OnlineExam.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Oline_Exam;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Oline_ExamEntities1" connectionString="metadata=res://*/OnlineExam.csdl|res://*/OnlineExam.ssdl|res://*/OnlineExam.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Oline_Exam;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Oline_ExamEntities2" connectionString="metadata=res://*/Onlin_Exam.csdl|res://*/Onlin_Exam.ssdl|res://*/Onlin_Exam.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Oline_Exam;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Oline_Exam" connectionString="metadata=res://*/Onlin_Exame.csdl|res://*/Onlin_Exame.ssdl|res://*/Onlin_Exame.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Oline_Exam;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Oline_Exam1" connectionString="metadata=res://*/Oline_Exam.csdl|res://*/Oline_Exam.ssdl|res://*/Oline_Exam.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Oline_Exam;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
