--- a/projectSQL/projectSQL.csproj
+++ b/projectSQL/projectSQL.csproj
@@ -55,11 +55,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Choice.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="correctAns_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
     <Compile Include="Course List.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Course List.Designer.cs">
       <DependentUpon>Course List.cs</DependentUpon>
+    </Compile>
+    <Compile Include="course.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
     </Compile>
     <Compile Include="CreateExame.cs">
       <SubType>Form</SubType>
@@ -67,17 +76,95 @@
     <Compile Include="CreateExame.Designer.cs">
       <DependentUpon>CreateExame.cs</DependentUpon>
     </Compile>
+    <Compile Include="Department.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Exam.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ExamAnswers_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ExamCorrection_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Examcourse_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
     <Compile Include="ExamDashborde.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ExamDashborde.Designer.cs">
       <DependentUpon>ExamDashborde.cs</DependentUpon>
     </Compile>
+    <Compile Include="Examresults_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="getAllcourses_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="getallDepartement_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="getAllExamsInCourse_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="getAllInstructors_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="getAllstudentExam_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="getAlltopics_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="GetCoursebyId_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="GetcourseInstructor_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="getCoursesByDeptID_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="GetDeptbyId_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="getExam_Question_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="getInsCourses_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="getInstractor_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="getInstructorByid_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="getInstructorperDept_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="GetStudentbyId_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="getStudentCourse_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="getstudentExam_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Get_instructor_by_deptId_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Instractor.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
     </Compile>
     <Compile Include="Instractors_home.cs">
       <SubType>Form</SubType>
@@ -145,13 +232,46 @@
     <Compile Include="MangeTopic.Designer.cs">
       <DependentUpon>MangeTopic.cs</DependentUpon>
     </Compile>
+    <Compile Include="Newquestion_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Online_Exame.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Online_Exame.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Online_Exame.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Online_Exame.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Online_Exame.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Question.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagrams_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Student.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
     <Compile Include="StudentDashbord.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="StudentDashbord.Designer.cs">
       <DependentUpon>StudentDashbord.cs</DependentUpon>
+    </Compile>
+    <Compile Include="studentExamCourse_Result.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
     </Compile>
     <Compile Include="StudentLogin.cs">
       <SubType>Form</SubType>
@@ -159,11 +279,20 @@
     <Compile Include="StudentLogin.Designer.cs">
       <DependentUpon>StudentLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="Student_Exam.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
+    </Compile>
     <Compile Include="Take Exame.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Take Exame.Designer.cs">
       <DependentUpon>Take Exame.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Topic.cs">
+      <DependentUpon>Online_Exame.tt</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Course List.resx">
       <DependentUpon>Course List.cs</DependentUpon>
@@ -229,6 +358,13 @@
     <EmbeddedResource Include="Take Exame.resx">
       <DependentUpon>Take Exame.cs</DependentUpon>
     </EmbeddedResource>
+    <EntityDeploy Include="Online_Exame.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Online_Exame.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Online_Exame.edmx.diagram">
+      <DependentUpon>Online_Exame.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -287,6 +423,18 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Online_Exame.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Online_Exame.edmx</DependentUpon>
+      <LastGenOutput>Online_Exame.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Online_Exame.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Online_Exame.edmx</DependentUpon>
+      <LastGenOutput>Online_Exame.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
